# openclaw-mumble-bridge

./: README.md  audio_utils.py  barge_in.py  bridge.py  config.yaml  mumble-openclaw-bridge-plan.md  mumble_client.py  mumble_timing_fix.py  openclaw_client.py  pyproject.toml  requirements.txt  sentence_splitter.py  stt.py  test_input.pcm  test_playback.py  tts.py  verify_stt.py
docs/: MUMBLE_AUDIO_GUIDE.md
tests/: __init__.py  audio_latency_test.py  audio_latency_test_fixed.py  audio_loopback.py  audio_pipeline_test.py  debug_audio_baseline.py  debug_audio_test.py  minimal_latency_test.py  mumble_timing_test.py  test_audio_utils.py  test_barge_in.py  test_openclaw_client.py  test_sentence_splitter.py  test_stt.py
