[project]
name = "openclaw-mumble-bridge"
version = "0.1.0"
description = "Voice bridge between Mumble and OpenClaw AI assistant"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
